--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/homeBanner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#F1C900"
@@ -157,13 +157,14 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/scroll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#FFFFFF"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/main_content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/arial"
