Final for Project Submission

--- a/app/src/main/res/layout/archive.xml
+++ b/app/src/main/res/layout/archive.xml
@@ -137,7 +137,10 @@
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/a"
                     android:contentDescription="@string/todo__"
-                    tools:ignore="ContentDescription,NestedWeights" />
+                    tools:ignore="ContentDescription,NestedWeights"
+                    android:onClick="onClick"
+                    android:tag = "@drawable/a"
+                    />
 
                 <ImageView
                     android:id="@+id/image2"
